# python_demo_repo

./: .gitignore  README.md  pyproject.toml
src/: anchor.py
src/bokeh_demo/: bokeh_demo.html  bokeh_demo.py
src/faker_demo/: faker_demo.py
src/flask_demo/: flask_demo.py
src/ftfy_demo/: ftfy_demo.py
src/loguru_demo/: loguru_demo.py
src/mlflow_demo/: mlflow_autolog_demo.py  mlflow_log_demo.py  rf_demo.py
src/mlflow_demo/mlruns/0/: meta.yaml
src/mlflow_demo/mlruns/925107533697313456/: meta.yaml
src/mlflow_demo/mlruns/925107533697313456/datasets/088676f7263b6fd630904041d7c5d261/: meta.yaml
src/mlflow_demo/mlruns/925107533697313456/datasets/11c84d6cfee3088ac3d7dcad54666683/: meta.yaml
src/mlflow_demo/mlruns/925107533697313456/f44980122b974dbd81c811383bcf6f99/: meta.yaml
src/plotly_demo/: plotly_demo.py
src/polars_demo/: make_random_dataframe.py  polars_demo.py
src/pydanktic_demo/: wo_demo.py
src/pydantic_demo/: pydantic_demo.py  wo_demo.py
src/pydantic_settings_demo/: .env  demo_config.py  settings_demo.py
src/pygwalker_demo/: pygwalker_demo.py
src/pytest_demo/: demo.py
src/python_to_latex_demo/: dataframe_to_latex.py  numbers.tex  numbers_to_latex.py  species.tex
src/ruff_demo/: readme.md
src/telegram_notifications_demo/: readme.md  telegram_demo.py
src/tqdm_demo/: tqdm_demo.py
src/uv_demo/: readme.md
tests/pytest_demo/: test_demo.py  test_demo_parameterized.py  test_demo_parameterized_from_function.py  test_demo_w_fixture.py  test_oracle.py
(+14 files in other folders)
