[project]
name = "ds-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.0",
    "mlflow>=2.21.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.25.2",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
